--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="max-w-4xl mx-auto px-4 text-center">
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-slate-800 border border-slate-700 text-xs font-mono text-brand-accent mb-6">
                     <span class="w-2 h-2 rounded-full bg-brand-accent animate-pulse"></span>
-                    PROJECT STATUS: PLANNING
+                    PROJECT STATUS: Data Collection
                 </div>
                 <h1 class="text-5xl md:text-7xl font-bold text-white tracking-tight mb-6">
                     Engineering the <br>
